feat(user-balance-history): allow admin to query user balance history
